--- a/ex1.html
+++ b/ex1.html
@@ -2,12 +2,14 @@
 <head>
 <meta charset="utf-8">
 <title>Ex1</title>
+<script src="ex2.js"></script>
+<script src="lib/jquery-1.11.0.js"></script>
 </head>
 
 <body>
 Usuario <input type="text" id="user">
 Repositório <input type="text" id="reponame">
-<button>Vai buscar as issues</button>
+<button onclick="vaibuscarasissues()">Vai buscar as issues</button>
 
 <table id="issuestable">
     <tr><th>Numero</th><th>Titulo</th>
