--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-My GitHub Page
+
+
+<html>
+<head>
+<meta charset="utf-8">
+<title>ng-masters Curso Angular</title>
+</head>
+
+<body>
+<ul>
+	<li><a href="aula1-issues/ex1.html"> Exercicio 1 - Issues </a></li>
+	<li><a href="aula2-life/life.html"> Exercicio 2 - Life</a></li>
+</ul>
+</body>
+</html>
