--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <ul>
 	<li><a href="aula1-issues/ex1.html"> Exercicio 1 - Issues </a></li>
 	<li><a href="aula2-life/life.html"> Exercicio 2 - Life</a></li>
+	<li><a href="aula3-alert/alert.html"> Exercicio 3 - Alert</a></li>
 </ul>
 </body>
 </html>
